# pytest-asyncio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  731.added.rst  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.rst  constraints.txt  pyproject.toml  pytest-min-requirements.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/: CODEOWNERS  actionlint-matcher.json  chronographer.yml  dependabot.yml
.github/workflows/: main.yml
changelog.d/: +167df28d.downstream.rst  +6aa3d3e0.added.rst  +6fe51a75.downstream.rst  +878.fixed.rst  +b22c903a.fixed.rst  +bd8f0ee6.changed.rst  +dc5bb56e.downstream.rst  +event_loop_policy_removed.removed.rst  +hook_based_rewrite.changed.rst  +scope_kwarg_removed.removed.rst  +version_floor_unchanged.downstream.rst  1025.added.rst  1052.fixed.rst  1090.deprecated.rst  1090.fixed.rst  1106.removed.rst  1107.changed.rst  1114.downstream.rst  1164.added.rst  1172.added.rst  1177.fixed.rst  1189.added.rst  1192.downstream.rst  1198.fixed.rst  1202.breaking.rst  1202.changed.rst  127.added.rst  1274.fixed.rst  1275.downstream.rst  1275.fixed.rst  1278.added.rst  1278.removed.rst  1298.changed.rst  1334.downstream.rst  1344.fixed.rst  1346.changed.rst  1373.fixed.rst  1392.changed.rst  1394.changed.rst  1395.downstream.rst  (+18 more)
debian/: changelog  control  copyright  debhelper-build-stamp  files  python3-pytest-asyncio.postinst.debhelper  python3-pytest-asyncio.prerm.debhelper  python3-pytest-asyncio.substvars  rules
dependencies/default/: constraints.txt  requirements-docs.txt  requirements.txt
dependencies/docs/: constraints.txt
dependencies/pytest-min/: constraints.txt  requirements.txt
docs/: concepts.rst  concepts_concurrent_execution_example.py  concepts_function_scope_example.py  concepts_module_scope_example.py  conf.py  index.rst
docs/how-to-guides/: change_default_fixture_loop.rst  change_default_test_loop.rst  change_fixture_loop.rst  change_fixture_loop_example.py  class_scoped_loop_example.py  configure_loop_factories_per_test.rst  custom_loop_factory.rst  index.rst  isolate_async_apps.rst  isolate_async_apps_example.py  migrate_from_0_21.rst  migrate_from_0_23.rst  migrate_from_1_x.rst  module_scoped_loop_example.py  multiple_loops.rst  multiple_loops_example.py  package_scoped_loop_example.py  parametrize_with_asyncio.rst  parametrize_with_asyncio_example.py  run_class_tests_in_same_loop.rst  run_module_tests_in_same_loop.rst  run_session_tests_in_same_loop.rst  run_test_with_specific_loop_factories.rst  session_scoped_loop_example.py  test_item_is_async_example.py  test_session_scoped_loop_example.py  uvloop.rst
docs/how-to-guides/configure_loop_factories_per_test/: conftest.py  test_extra_loop_factories.py
docs/how-to-guides/run_test_with_specific_loop_factories/: conftest.py  test_loop_factories_subset.py
docs/reference/: changelog.rst  configuration.rst  hooks.rst  index.rst  warnings.rst
docs/reference/decorators/: index.rst  pytest_asyncio_fixture_example.py
docs/reference/fixtures/: event_loop_example.py  event_loop_policy_example.py  event_loop_policy_parametrized_example.py  index.rst
docs/reference/markers/: class_scoped_loop_custom_policies_strict_mode_example.py  class_scoped_loop_strict_mode_example.py  index.rst  (+4 more)
docs/source/: concepts.rst  concepts_function_scope_example.py  concepts_module_scope_example.py  conf.py  index.rst  reference.rst  support.rst
pytest_asyncio/: __init__.py  _collection.py  _config.py  _dispatch.py  _fixtures.py  _hooks.py  _markers.py  _mismatch.py  _runner.py  _usage_checks.py  exceptions.py  fixture.py  plugin.py  utils.py
tests/: conftest.py  test_async_fixture.py  test_async_fixture_35.py  test_async_fixtures.py  test_asyncio_debug.py  test_asyncio_fixture.py  test_asyncio_mark.py  test_asyncio_mark_on_sync_function.py  test_autouse.py  test_autouse_35.py  test_change_of_policy.py  test_contextvars.py  test_dependent_fixtures.py  test_doctest.py  test_event_loop_cleanup.py  test_event_loop_fixture.py  test_event_loop_fixture_finalizer.py  test_event_loop_fixture_override_deprecation.py  test_event_loop_policy_removed.py  test_event_loop_scope.py  test_event_loop_scope_35.py  test_explicit_event_loop_fixture_request.py  test_fixture_loop_scopes.py  test_flaky_integration.py  test_hypothesis_integration.py  test_import.py  test_is_async_test.py  test_loop_factory_parametrization.py  test_loop_factory_parametrize_multi_backend.py  test_loop_scope_mismatch_warning.py  test_multiloop.py  test_non_global_loop.py  test_package.py  test_port_factories.py  test_pytest_min_version_warning.py  test_pytest_skip.py  test_set_event_loop.py  test_simple.py  test_simple_35.py  test_skips.py  (+5 more)
tests/async_fixtures/: test_async_fixtures.py  test_async_fixtures_35.py  test_async_fixtures_contextvars.py  test_async_fixtures_scope.py  test_async_fixtures_with_finalizer.py  test_async_fixtures_with_finalizer_scope.py  test_async_gen_fixtures.py  test_async_gen_fixtures_35.py  test_async_gen_fixtures_36.py  test_async_gen_fixtures_within_context_37.py  test_autouse_fixtures.py  test_coroutine_fixtures.py  test_nested.py  test_nested_36.py  test_parametrized_loop.py  test_shared_module_fixture.py
tests/custom_policy/: conftest.py  test_alternative_policies.py
tests/hypothesis/: test_base.py  test_inherited_test.py
tests/loop_fixture_scope/: conftest.py  test_loop_fixture_scope.py
tests/markers/: test_class_marker.py  test_class_marker_35.py  test_class_scope.py  test_event_loop_policy.py  test_function_scope.py  test_invalid_arguments.py  test_mixed_scope.py  test_module_marker.py  test_module_marker_35.py  test_module_scope.py  test_package_scope.py  test_session_scope.py
tests/modes/: test_auto_mode.py  test_legacy_mode.py  test_strict_mode.py
tests/multiloop/: conftest.py  test_alternative_loops.py
tests/respect_event_loop_policy/: test_respects_event_loop_policy.py
tests/sessionloop/: conftest.py  test_session_loops.py
tests/trio/: test_fixtures.py
tools/: get-version.py
(+35 files in other folders)
