[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools>=51",
  "setuptools-scm[toml]>=6.2",
  "wheel>=0.36",
]

[tool.setuptools_scm]
write_to = "pytest_asyncio/_version.py"

[tool.ruff]
line-length = 88
lint.select = [
  "E", # pycodestyle
  "F", # pyflakes
  "W", # pycodestyle
]
