[metadata]
name = pytest-asyncio
version = attr: pytest_asyncio.__version__
url = https://github.com/pytest-dev/pytest-asyncio
project_urls =
  Documentation = https://pytest-asyncio.readthedocs.io
  Changelog = https://pytest-asyncio.readthedocs.io/en/latest/reference/changelog.html
  Source Code = https://github.com/pytest-dev/pytest-asyncio
  Bug Tracker = https://github.com/pytest-dev/pytest-asyncio/issues
description = Pytest support for asyncio
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Tin Tvrtković <tinchester@gmail.com>
author_email = tinchester@gmail.com
license = Apache 2.0
license_files = LICENSE
classifiers =
  Development Status :: 4 - Beta

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

  Topic :: Software Development :: Testing

  Framework :: AsyncIO
  Framework :: Pytest
  Typing :: Typed

[options]
python_requires = >=3.8
packages = pytest_asyncio
include_package_data = True

# Always adjust requirements.txt and pytest-min-requirements.txt when changing runtime dependencies
install_requires =
  pytest >= 7.0.0,<9

[options.extras_require]
testing =
  coverage >= 6.2
  hypothesis >= 5.7.1
docs =
  sphinx >= 5.3
  sphinx-rtd-theme >= 1.0

[options.entry_points]
pytest11 =
    asyncio = pytest_asyncio.plugin

[coverage:run]
source = pytest_asyncio
branch = true

[coverage:report]
show_missing = true

[tool:pytest]
python_files = test_*.py *_example.py
addopts = -rsx --tb=short
testpaths = docs/source tests
asyncio_mode = auto
junit_family=xunit2
filterwarnings =
  error
  ignore:The event_loop fixture provided by pytest-asyncio has been redefined.*:DeprecationWarning

[flake8]
max-line-length = 88
