[metadata]
# Not everything is in in pyproject.toml because of this issue:
; Traceback (most recent call last):
;  File "/tmp/build-env-rud8b5r6/lib/python3.12/site-packages/setuptools/config/expand.py", line 69, in __getattr__
;    return next(
;           ^^^^^
;StopIteration
;
;The above exception was the direct cause of the following exception:
;
;Traceback (most recent call last):
;  File "/tmp/build-env-rud8b5r6/lib/python3.12/site-packages/setuptools/config/expand.py", line 183, in read_attr
;    return getattr(StaticModule(module_name, spec), attr_name)
;           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
;  File "/tmp/build-env-rud8b5r6/lib/python3.12/site-packages/setuptools/config/expand.py", line 75, in __getattr__
;    raise AttributeError(f"{self.name} has no attribute {attr}") from e
;AttributeError: pytest_asyncio has no attribute __version__
version = attr: pytest_asyncio.__version__
